# worminator

./: CMakeLists.txt  README.md  ReadMe.txt  license-change.txt  license.txt
data/: demo1.dem  demo2.dem  demo3.dem  map01.map  map02.map  map03.map  map04.map  map05.map  map06.map  map07.map  map08.map  map09.map  map10.map  map11.map  map12.map  map13.map  map14.map  map15.map  map16.map  map18.map  map19.map  tutorial.map
sce_sys/livearea/contents/: template.xml
src/: animation.h  beams.h  civilian_ai.h  demo.h  editor.h  enemy_ai.h  globals.h  grphdefs.h  infodefs.h  item_ai.h  load_utils.h  menus.h  misc_ai.h  particle_ai.h  player.h  projectile_ai.h  prototypes.h  scripts.h  sound.h  spawn_ai.h  sprites.h  text.h  unix.h  wormdata.h  worminator.c
src/vita_port/: ReadMe.txt  error_data_files.h  ime_dialog.c  ime_dialog.h  psvita.c  psvita.h  resources.h
